<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".views.AlbumsTracksActivity">

    <include android:id="@+id/toolbar" layout="@layout/toolbar" />
    <include layout="@layout/app_image" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="-100dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textColorHint="@color/white"
        android:layout_height="60dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:hint="@string/track_name_hint"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textColorHint="@color/white"
        android:layout_height="60dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:hint="@string/track_duration_hint"
            android:textColor="@color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_create_tie_track_to_album"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="300dp"
        android:text="@string/tie_track" />


</FrameLayout>