...
                android:layout_height="wrap_content"
                android:text="Comentarios" />

        </com.google.android.material.tabs.TabLayout>

        <FrameLayout
            android:id="@+id/tabContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/tracksContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_tie_track_to_album"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="60dp"
                    android:background="#D0BCFF"
                    android:drawableLeft="@android:drawable/ic_input_add"
...
