...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".views.AlbumsActivity">

    <include android:id="@+id/toolbar" layout="@layout/toolbar" />
    <include layout="@layout/app_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="?android:attr/actionBarSize">

        <EditText
            android:id="@+id/etSearch"
            style="@style/SearchEditTextStyle"
            android:imeOptions="actionSearch"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
...
                android:layout_height="39dp"
                android:layout_weight="1" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAlbums"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</FrameLayout>
